--- a/data/en/docs/sidebar.yml
+++ b/data/en/docs/sidebar.yml
@@ -1,11 +1,18 @@
-- title: Documentation
+- title: Overview
   pages:
-    - title: Overview
+    - title: AboutMe
 
-- title: Section 01
+- title: Languages
   pages:
-    - title: Page 01
+    - title: Java Basic
+    - title: Python Basic
 
-- title: Section 02
+- title: Computer Science
   pages:
-    - title: Page 02
+    - title: Computer Network
+    - title: Operating System
+
+- title: Backend Develop
+  pages:
+    - title: Express
+    - title: Fast API
