--- a/hugo.yaml
+++ b/hugo.yaml
@@ -30,10 +30,10 @@ params:
 
   author:
     name: Caiyi Zhang
-    url: https://your.site
+    url: https://zcy530.github.io/
 
   themeColors:
-    light: '#000000'
+    light: '#ffffff'
     dark: '#121212'
 
   years:
